--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@angular/router": "^21.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.26.4",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.3",
